[INFER] Fix incorrect uses of getDenseArrayCapacity, bug 640203.